# streaming-data

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  app.bash  docker-compose.yml  docker_build.sh  infra.bash  pyproject.toml
.github/workflows/: ci.yml
app/: CMakeLists.txt  Dockerfile  docker-compose.yml  pyproject.toml  tables.sql
app/cpp/: CMakeLists.txt  shawlynotvol.cpp
app/include/: _core.h
app/include/shawlynotvol/: shawlynotvol.h
app/sql/: tables.sql
app/src/: main_historical_ingest.py  main_ingest.py  main_live_ingest.py  main_vol.py
app/src/streaming_data/db/: __init__.py  util.py
app/src/streaming_data/ingest/historical/: kracken_client.py  massive.py
app/src/streaming_data/ingest/realtime/: kracken_client.py
app/src/streaming_data/vol/: call_vol.py
app/streaming_data/db/: util.py
app/streaming_data/vol/: binomical_vol.py  call_vol.py
cpp/: CMakeLists.txt  _core.cpp
include/: _core.h
infra/certs/: acme.sh.j2
infra/docker/: docker-compose.yml.j2
sql/: create.sql  drop.sql
src/: main.py  main_ingest.py  main_pricer.py  main_vol.py
src/streaming_data/: __init__.py  connector.py  model.py  test.py  tick_replay.py
src/streaming_data/db/: __init__.py  util.py
src/streaming_data/ingest/: __init__.py  binance_client.py  kracken_client.py
src/streaming_data/ingest/historical/: massive.py
src/streaming_data/ingest/rates/: fed.py
src/streaming_data/market_data/: __init__.py  market_data.py
src/streaming_data/pricing/: binomial_pricer.py  implied_vol.py
src/test/: test_pricer.py  test_tick_replay.py
src/test/fixtures/: asset.csv  equities.csv  expected_output.csv  fed.csv  massive.csv  options.csv  rates.csv  venue.csv
