[project]
name = "streaming-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shawlynot", email = "88781957+shawlynot@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "databricks-sql-connector>=4.0.5",
]

[project.scripts]
streaming-data = "streaming_data:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
