[project]
name = "streaming-data"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "shawlynot", email = "88781957+shawlynot@users.noreply.github.com" }
]
requires-python = ">=3.14.3"
dependencies = [
    "websockets",
    "psycopg[binary, pool]",
    "requests",
    "massive",
    "scipy",
    "polars",
    "boto3",
    "pyarrow"
]

[dependency-groups]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
    "scalene",
    "pydantic",
    "pybind11"
]

[build-system]
requires = ["pybind11", "scikit-build-core>=0.11"]
build-backend = "scikit_build_core.build"