[project]
name = "streaming-data"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "shawlynot", email = "88781957+shawlynot@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "websockets",
    "psycopg[binary]",
    "requests",
    "massive",
    "scipy",
    "polars",
    "pybind11",
]

[dependency-groups]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]

[build-system]
requires = ["pybind11", "scikit-build-core>=0.11"]
build-backend = "scikit_build_core.build"